# NanoSim

./: .gitignore  .pre-commit-config.yaml  Business_Plan_NanoSim.md  CNAME  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Implementation_Plan_Month1.md  LICENSE  Motivation.md  PUSH_TO_GITHUB.md  Phase1_WorkPlan.md  QUICKSTART.md  README.md  WEEK1_SUMMARY.md  coverage.xml  deploy.bat  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  styles.css  ~Business_Plan_NanoSim.md.saved.bak
.claude/: settings.local.json
.github/workflows/: deploy-landing-page.yml
docs/: contributing.md  index.md  installation.md  motivation.md
docs/api/: core.md
docs/architecture/: overview.md
docs/guide/: quickstart.md
examples/liposome_her2/: README.md  config.yaml
landing-page/: CNAME  DEPLOYMENT_CHECKLIST.md  README.md  index.html  script.js  styles.css
landing-page/images/: IMAGE_QUICK_GUIDE.md  IMAGE_STRATEGY.md  README.md  convert_to_webp.py  generate_diagrams.py  generate_pymol_images.py  generate_use_case_diagrams.py
src/nanosim/: __init__.py  cli.py
src/nanosim/bridges/: __init__.py  macro_to_meso.py  meso_to_micro.py  micro_to_meso.py
src/nanosim/core/: bridge.py  simulation.py
src/nanosim/engines/: __init__.py  autodock.py  gromacs.py  openfoam.py
src/nanosim/orchestrator/: workflow_router.py
src/nanosim/utils/: logger.py  validators.py
src/nanosim/workflows/: __init__.py  standard_vs.py
tests/: conftest.py
tests/unit/: test_core.py
